# kaleidoscope

./: CMakeLists.txt  README.md
images/: mk-icon
src/: .gitignore  CMakeLists.txt  Makefile
src/kdenlive/: .kaleid0sc0pe.xml.swp  CMakeLists.txt  kaleid0sc0pe.xml
src/lib/: CMakeLists.txt  libkaleidoscope.cpp  libkaleidoscope.h
src/lib/io/: Makefile  io.mk  libio.cpp  libio.h
src/lib/kaleidoscope/: CMakeLists.txt  Makefile  ikaleidoscope.h  kaleidoscope.mk  libkaleidoscope.cpp  libkaleidoscope.h
src/lib/kio/: CMakeLists.txt  libkio.cpp  libkio.h
src/win/: .gitignore  kaleid0sc0pe.vcxproj  kaleid0sc0pe.vcxproj.filters  kaleidoscope.sln  kimg.vcxproj  kimg.vcxproj.filters  kperf.vcxproj  kperf.vcxproj.filters  ktest.vcxproj  ktest.vcxproj.filters  libio.vcxproj  libio.vcxproj.filters  libkaleidoscope.vcxproj  libkaleidoscope.vcxproj.filters
